--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "io-ts-types-experimental",
   "version": "0.1.0",
   "author": "Paul Chavard <github@paul.chavard.net>",
-  "contributors": ["Giulio Canti <giulio.canti@gmail.com>"],
+  "contributors": [
+    "Giulio Canti <giulio.canti@gmail.com>"
+  ],
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^16.7.10",
@@ -17,6 +19,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
+    "release-it": "^14.11.5",
     "rollup": "^2.56.3",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "typescript": "^4.4.2"
@@ -55,5 +58,11 @@
   "volta": {
     "node": "15.8.0",
     "yarn": "1.22.10"
+  },
+  "release-it": {
+    "npm": {
+      "publish": true,
+      "skipChecks": true
+    }
   }
 }
